recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value couleur
  setCouleur(couleur=Color.lightGray)
             ^